# lotobot-backend

./: Dockerfile  README.md  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml  test_websocket.py
.github/workflows/: deploy.yml
ai/: agent.py  analysis_prompt.txt  archive_analysis_prompt.txt  conversation_prompt.txt  doc_2025-11-23_01-38-24.env  intent_prompt.txt  logic_description.txt  rag.py  requirements.txt  system_prompt.txt
src/: main.py
src/core/: config.py
src/integrations/ai/: __init__.py  agent.py  rag.py  websocket_codes.py
src/integrations/ai/prompts/: analysis_prompt.txt  archive_analysis_prompt.txt  conversation_prompt.txt  intent_prompt.txt  system_prompt.txt
src/integrations/redis/: __init__.py  client.py
src/integrations/stoloto/: __init__.py  base.py  client.py
src/integrations/stoloto/details/: client.py  models.py
src/integrations/stoloto/list/: client.py  models.py
src/integrations/stoloto/main/: client.py  models.py
src/integrations/stoloto/news/: client.py  models.py
src/integrations/stoloto/tabs/: client.py  models.py
src/presentation/routers/: __init__.py  ai.py  stoloto.py
src/services/ai/: __init__.py  chat_service.py  message_formatter.py
